--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 	"moment":"~2.18.1",
 	"cors":"~2.8.3",
 	"properties-reader":"~0.0.15",
-	"replaceall":"~0.1.6"
+	"replaceall":"~0.1.6",
+	"jwt-simple":"~0.5.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
