Updated the OpenAm endpoint

--- a/properties/endpoint.properties
+++ b/properties/endpoint.properties
@@ -4,6 +4,9 @@
 [olp-adapter-service-access]
 api.search.endpoint = 
 
+[open-am]
+security.endpoint = 
+
 [olp-adapter-service-access]
 api.proxy.ip = 
 
