--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	"properties-reader":"~0.0.15",
 	"replaceall":"~0.1.6",
 	"jwt-simple":"~0.5.1",
-  "ldapjs":"~1.0.1"
+  "ldapjs":"~1.0.1",
+  "jsonwebtoken":"~7.4.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
