--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 	"replaceall":"~0.1.6",
 	"jwt-simple":"~0.5.1",
   "ldapjs":"~1.0.1",
-  "jsonwebtoken":"~7.4.0"
+  "jsonwebtoken":"~7.4.0",
+  "async":"~2.4.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
