--- a/properties/queries.properties
+++ b/properties/queries.properties
@@ -1,7 +1,7 @@
 # contents of properties file
 
 [olp-adapter-service-access]
-api.search.vendors=Amazon,eBay,StoreFeeder,Stubhub 
+api.search.vendors=Amazon,eBay,StoreFeeder,Stubhub,PayPal
 
 [olp-adapter-service-access]
 api.search.query = {"size":0,"query":{"filtered":{"query":{"bool":{"must":[{"match":{"facility":"postage-third-party-adapter-access"}},{"match":{"X-Partner":"Vendor"}},{"match":{"_statusCode":"200"}}]}},"filter":{"range":{"timestamp":{"gt":"1493363491000","lt":"1493367091000"}}}}}}
