--- a/properties/queries.properties
+++ b/properties/queries.properties
@@ -4,10 +4,10 @@
 api.search.vendors=Amazon,StoreFeeder,eBay,Stubhub,PayPal
 
 [olp-adapter-service-access]
-api.search.query = {"size":0,"query":{"filtered":{"query":{"bool":{"must":[{"match":{"facility":"postage-third-party-adapter-access"}},{"match":{"X-Partner":"Vendor"}},{"match":{"_statusCode":"200"}}]}},"filter":{"range":{"timestamp":{"gt":"1493363491000","lt":"1493367091000"}}}}}}
+api.search.query = {"size":0,"query":{"filtered":{"query":{"bool":{"must":[{"wildcard":{"facility":"postage-third-party-adapter-*access"}},{"match":{"X-Partner":"Vendor"}},{"match":{"_statusCode":"200"}}]}},"filter":{"range":{"timestamp":{"gt":"1493363491000","lt":"1493367091000"}}}}}}
 #{"size": 0,"query":{"filtered": {"query":{"bool":{"must":[{"match": {"facility":"olp-adapter-service-access"}}]}},"filter":{"range":{"timestamp":{"gt":"1493363491000","lt":"1493367091000"}}}}},"aggs": {"words": {"terms": {"field":"X-Partner"},"aggs": {"responsecodes": {"terms": {"field": "_statusCode"}}}}}}
 
 [olp-adapter-service-access]
-api.failsearch.query = {"size":0,"query":{"filtered":{"query":{"bool":{"must":[{"match":{"facility":"postage-third-party-adapter-access"}},{"match":{"X-Partner":"Vendor"}}],"must_not":{"term":{"_statusCode":"200"}}}},"filter":{"range":{"timestamp":{"gt":"1493363491000","lt":"1493367091000"}}}}}}
+api.failsearch.query = {"size":0,"query":{"filtered":{"query":{"bool":{"must":[{"wildcard":{"facility":"postage-third-party-adapter-*access"}},{"match":{"X-Partner":"Vendor"}}],"must_not":{"term":{"_statusCode":"200"}}}},"filter":{"range":{"timestamp":{"gt":"1493363491000","lt":"1493367091000"}}}}}}
 
 
